design and termination is on

--- a/src/main/webapp/views/includes/sidebar.html
+++ b/src/main/webapp/views/includes/sidebar.html
@@ -41,7 +41,7 @@
             <a href="../validated/listEmployee.jsp"><i class="fi fi-rr-list"></i>Employee List</a>
           </li>
           <li>
-            <a href=""><i class="fi fi-rr-split"></i>Department</a>
+            <a href="../validated/department.jsp"><i class="fi fi-rr-split"></i>Department</a>
           </li>
         </ul>
       </div>
