--- a/src/main/webapp/styles/views/dashboard.css
+++ b/src/main/webapp/styles/views/dashboard.css
@@ -1,1 +1,19 @@
 
+.employees, .task{
+  display: flex;
+  gap: 2vh;
+}
+.card{
+  background-color: white;
+  width: 25vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2vh;
+  border-radius: 2vh;
+  box-shadow: 2px 2px 10px 0.5px rgba(0, 0, 0, 0.15);
+}
+.card h2{
+  text-align: center;
+}
