--- a/src/main/webapp/styles/includes/sidebar.css
+++ b/src/main/webapp/styles/includes/sidebar.css
@@ -1,30 +1,86 @@
 body{
   background-color: #c9d8e6;
   padding-left: 30vh;
+  margin: 0;
+  padding: 0;
 }
-.sidebar{
+
+nav{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  background: linear-gradient(1deg, #266396, #6098ba);
-  width: 18%;
+  /* align-items: flex-start; */
+  /* justify-content: flex-start; */
+  background-color: aliceblue;
+  width: 300px;
   position: fixed;
   top: 0;
   bottom: 0;
-  color: white;
+  gap: 30px;
 }
-.sidebar .top-section{
+nav .top-section {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+nav .top-section .pic-container{
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
+  flex-direction: row;
+  width: 20%;
 }
- .top-section .profile-pic{
-  width: 20vh;
+nav .top-section .pic-container .profile-pic{
+  width: 100%;
 }
-.sidebar{
-  position: fixed;
-  left: 0;
-  width: 30vh;
+nav .middle-section{
+  display: flex;
+  flex: 1;
+}
+nav .middle-section ul{
+  flex-direction: column;
+  gap: 20px;
+  flex-grow: 1;
+  width: 100%;
+  position: inherit;
+
+}
+nav .middle-section ul li{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding-left: 20%;
+}
+nav .middle-section ul li a{
+  display: flex;
+  gap: 20px;
+  font-size: larger;
+  width: 100%;
+  align-items: center;
+  height: 50px;
+}
+nav .middle-section ul li:hover{
+  background-color: rgb(233, 224, 224);
+}
+
+.bottom-section{
+  display: flex;
+  flex: 2;
+  justify-content: center;
+  align-items: center;
+}
+.bottom-section form button{
+  background-color: #c9d8e6;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  display: flex;
+  gap: 20px;
+  font-size: large;
+}
+.bottom-section form button:hover{
+  opacity: 0.8;
 }
