--- a/src/main/webapp/styles/views/general.css
+++ b/src/main/webapp/styles/views/general.css
@@ -7,8 +7,8 @@
 body{
   font-family: Arial, 'Roboto';
   color: black;
-  background-color: #E0E0E0;
-  padding: 0;
+
+  padding-left: 40vh;
   margin: 0;
 }
 a{
